# quoridor

./: README.md  pyproject.toml  run_hotseat.py
src/occams_council/engine/: rules.py  state.py
src/occams_council/players/: factory.py  hotseat.py
src/occams_council/players/agents/: base.py  human_agent.py  llm_agent.py  random_agent.py
src/occams_council/render/: pygame_renderer.py
tests/: test_engine.py  test_factory.py  test_hotseat.py  test_llm.py
