[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "occams-council"
version = "0.0.1"
description = "Quoridor prototype with hotseat and agent framework"
authors = [ { name = "Andre" } ]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pygame>=2.5.0",
]

[tool.setuptools.packages.find]
where = ["src"]
